--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,7 +18,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
-          cache: npm
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - run: pnpm --version
       - run: pnpm install
       - run: pnpm -r --filter=./packages/e2ee build
