--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "pnpm -r --filter=./packages/* lint",
     "fmt": "pnpm -r --filter=./packages/* fmt",
     "test": "pnpm -r --filter=./packages/* test",
-    "start": "npx serve -S -l 8080 ./example",
+    "start": "serve -S -l 8080 ./example",
     "doc": "npx typedoc",
     "release:canary": "./scripts/release_canary.sh"
   },
