--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
   },
   "resolutions": {
     "get-pkg-repo": "5.0.0"
+  },
+  "packageManager": "pnpm@8.6.5",
+  "engines": {
+    "node": ">=16.20.0"
   }
 }
