--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -5,7 +5,7 @@
     "watch": "rollup -c -w",
     "lint": "eslint --ext .ts ./src",
     "fmt": "prettier --write src",
-    "test": "jest --detectOpenHandles --forceExit"
+    "test": "vitest"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "25.0.0",
@@ -14,19 +14,18 @@
     "@rollup/plugin-typescript": "11.1.1",
     "@shiguredo/lyra-wasm": "2023.1.0",
     "@swc/core": "1.3.59",
-    "@swc/jest": "0.2.26",
     "@types/jest": "29.5.1",
     "@typescript-eslint/eslint-plugin": "5.59.6",
     "@typescript-eslint/parser": "5.59.6",
     "eslint": "8.41.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-prettier": "4.2.1",
-    "jest": "29.5.0",
-    "jest-environment-jsdom": "29.5.0",
+    "jsdom": "^22.1.0",
     "prettier": "2.8.8",
     "rollup": "3.22.1",
     "rollup-plugin-delete": "2.0.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "vitest": "^0.32.4"
   },
   "dependencies": {
     "@sora/e2ee": "^2021.1.0",
