--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -5,7 +5,7 @@
     "watch": "rollup -c -w",
     "lint": "eslint --ext .ts ./src",
     "fmt": "prettier --write src",
-    "test": "vitest"
+    "test": "vitest run"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "25.0.0",
@@ -14,7 +14,6 @@
     "@rollup/plugin-typescript": "11.1.1",
     "@shiguredo/lyra-wasm": "2023.1.0",
     "@swc/core": "1.3.59",
-    "@types/jest": "29.5.1",
     "@typescript-eslint/eslint-plugin": "5.59.6",
     "@typescript-eslint/parser": "5.59.6",
     "eslint": "8.41.0",
@@ -28,7 +27,7 @@
     "vitest": "^0.32.4"
   },
   "dependencies": {
-    "@sora/e2ee": "^2021.1.0",
+    "@sora/e2ee": "workspace:^",
     "fflate": "0.7.4"
   }
 }
