--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -12,22 +12,10 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "newLine": "LF",
-    "types": [
-      "jest"
-    ],
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ],
+    "types": [],
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
     "declarationDir": "../../"
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "tests"
-  ]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "tests"]
 }
