--- a/packages/e2ee/package.json
+++ b/packages/e2ee/package.json
@@ -19,14 +19,7 @@
     "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-replace": "5.0.2",
     "@rollup/plugin-typescript": "11.1.2",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
-    "eslint": "8.45.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "prettier": "2.8.8",
-    "rollup": "3.26.2",
-    "typescript": "5.1.6"
+    "rollup": "3.26.2"
   },
   "dependencies": {
     "@sora/go-wasm": "workspace:^"
