--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dist"
   ],
   "devDependencies": {
+    "@biomejs/biome": "1.3.3",
     "@typescript-eslint/eslint-plugin": "6.10.0",
     "@typescript-eslint/parser": "6.10.0",
     "eslint": "8.53.0",
