--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "sora-js-sdk",
   "version": "2023.2.0-canary.7",
   "description": "WebRTC SFU Sora JavaScript SDK",
@@ -31,7 +32,7 @@
     "@biomejs/biome": "1.3.3",
     "serve": "14.2.1",
     "typedoc": "0.25.3",
-    "typescript": "5.2.2",
+    "typescript": "5.3.2",
     "vitest": "0.34.6"
   },
   "resolutions": {
