--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "dist/sora.d.ts",
   "scripts": {
     "dev": "vite",
+    "e2e-test": "playwright test --project=chromium",
     "build": "pnpm -r --filter=./packages/* build",
     "lint": "pnpm -r --filter=./packages/* lint",
     "fmt": "pnpm -r --filter=./packages/* fmt",
@@ -29,6 +30,7 @@
   ],
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
+    "@playwright/test": "1.41.2",
     "typedoc": "0.25.8",
     "typescript": "5.3.3",
     "vite": "5.1.3",
