--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -33,12 +33,12 @@ jobs:
       - run: pnpm exec playwright install --with-deps
       - run: pnpm run build
       - run: pnpm exec playwright test --project=${{ matrix.browser }}
-      - uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
+      # - uses: actions/upload-artifact@v4
+      #   if: always()
+      #   with:
+      #     name: playwright-report
+      #     path: playwright-report/
+      #     retention-days: 30
       - name: Slack Notification
         if: failure()
         uses: rtCamp/action-slack-notify@v2
