--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "dist/sora.d.ts",
   "scripts": {
     "dev": "vite",
+    "examples": "vite build",
     "e2e-test": "playwright test --project=chromium",
     "build": "pnpm -r --filter=./packages/* build",
     "lint": "pnpm -r --filter=./packages/* lint",
