--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Prepare static files
         run: |
           mkdir _site/
-          cp dist/sora.js _site/
+          cp dist/sora.mjs _site/
           cp example/check.html _site/
           cp example/sw.js _site/
       - name: Upload files
