--- a/env.local.example
+++ b/env.local.example
@@ -1,3 +1,3 @@
-VITE_SORA_SIGNALING_URL=wss://sora.example.com/signaling
+VITE_SORA_SIGNALING_URL=ws://127.0.0.1:5000/signaling
 VITE_SORA_CHANNEL_ID_PREFIX=sora-js-sdk-e2e-test_
 VITE_ACCESS_TOKEN=access_token
