--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -29,6 +29,7 @@ jobs:
           version: 8
       - run: pnpm --version
       - run: pnpm install
+      - run: pnpm run build
       - run: pnpm exec playwright install --with-deps
       - run: pnpm exec playwright test --project=${{ matrix.browser }}
       # - uses: actions/upload-artifact@v4
