--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -10,7 +10,7 @@ on:
     - cron: "0 2 * * 1-5"
 
 jobs:
-  e2e-tset:
+  e2e-test:
     timeout-minutes: 20
     runs-on: ubuntu-latest
     strategy:
