--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -35,6 +35,8 @@ jobs:
       - run: pnpm run build
       - run: pnpm exec playwright install --with-deps
       - run: pnpm exec playwright test --project=${{ matrix.browser }}
+        env:
+          VITE_SORA_CHANNEL_ID_SUFFIX: _${{ github.run_id }}-${{ matrix.node }}
       # - uses: actions/upload-artifact@v4
       #   if: always()
       #   with:
