--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -36,7 +36,7 @@ jobs:
       - run: pnpm exec playwright install --with-deps
       - run: pnpm exec playwright test --project=${{ matrix.browser }}
         env:
-          VITE_SORA_CHANNEL_ID_SUFFIX: _${{ github.run_id }}-${{ matrix.node }}
+          VITE_SORA_CHANNEL_ID_SUFFIX: _${{ matrix.node }}
       # - uses: actions/upload-artifact@v4
       #   if: always()
       #   with:
