--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -15,8 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # node: ["18", "20", "21"]
-        node: ["20"]
+        node: ["18", "20", "21"]
         # browser: ["chromium", "firefox", "webkit"]
         browser: ["chromium"]
     env:
