--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "module": "dist/sora.mjs",
   "types": "dist/sora.d.ts",
   "scripts": {
+    "dev": "vite",
+    "examples": "vite build",
+    "e2e-test": "playwright test --project=chromium",
     "build": "pnpm -r --filter=./packages/* build",
     "lint": "pnpm -r --filter=./packages/* lint",
     "fmt": "pnpm -r --filter=./packages/* fmt",
     "test": "pnpm -r --filter=./packages/* test",
-    "start": "serve -S -l 8080 ./example",
     "doc": "typedoc",
     "release:canary": "./scripts/release_canary.sh"
   },
@@ -29,9 +31,10 @@
   ],
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
-    "serve": "14.2.1",
+    "@playwright/test": "1.41.2",
     "typedoc": "0.25.8",
     "typescript": "5.3.3",
+    "vite": "5.1.3",
     "vitest": "1.3.0"
   },
   "resolutions": {
